lib/zebra/j2js/JavaExpression.rb
# Auto-generated from a Treetop grammar. Edits may be lost.


module JavaExpression
  include Treetop::Runtime

  def root
    @root ||= :code
  end

  include JavaCommon

  include JavaLiteral

  include JavaMethod

  module Code0
    def import
      elements[0]
    end

  end

  module Code1
    def package
      elements[1]
    end

    def body
      elements[4]
    end
  end

  def _nt_code
    start_index = index
    if node_cache[:code].has_key?(index)
      cached = node_cache[:code][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      r2 = _nt_gap
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    s0 << r1
    if r1
      r3 = _nt_package
      s0 << r3
      if r3
        s4, i4 = [], index
        loop do
          i5, s5 = index, []
          r6 = _nt_import
          s5 << r6
          if r6
            s7, i7 = [], index
            loop do
              r8 = _nt_gap
              if r8
                s7 << r8
              else
                break
              end
            end
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
            s5 << r7
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(Code0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s0 << r4
        if r4
          s9, i9 = [], index
          loop do
            r10 = _nt_gap
            if r10
              s9 << r10
            else
              break
            end
          end
          r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
          s0 << r9
          if r9
            r11 = _nt_codeBodyList
            s0 << r11
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(JavaSourceCode,input, i0...index, s0)
      r0.extend(Code1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:code][start_index] = r0

    r0
  end

  module CodeBodyList0
    def codeBody
      elements[0]
    end

  end

  module CodeBodyList1
    def codeBody
      elements[0]
    end

  end

  def _nt_codeBodyList
    start_index = index
    if node_cache[:codeBodyList].has_key?(index)
      cached = node_cache[:codeBodyList][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_codeBody
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        r3 = _nt_gap
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        s4, i4 = [], index
        loop do
          i5, s5 = index, []
          r6 = _nt_codeBody
          s5 << r6
          if r6
            s7, i7 = [], index
            loop do
              r8 = _nt_gap
              if r8
                s7 << r8
              else
                break
              end
            end
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
            s5 << r7
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(CodeBodyList0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s0 << r4
      end
    end
    if s0.last
      r0 = instantiate_node(JavaGroup,input, i0...index, s0)
      r0.extend(CodeBodyList1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:codeBodyList][start_index] = r0

    r0
  end

  def _nt_codeBody
    start_index = index
    if node_cache[:codeBody].has_key?(index)
      cached = node_cache[:codeBody][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_class
    if r1
      r0 = r1
    else
      r2 = _nt_interface
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:codeBody][start_index] = r0

    r0
  end

  module Expression0
    def type
      elements[2]
    end

  end

  module Expression1
    def arg1
      elements[0]
    end

    def INSTANCEOF
      elements[2]
    end

    def arg2
      elements[4]
    end
  end

  module Expression2
    def exprOperator
      elements[1]
    end

    def expression
      elements[3]
    end
  end

  module Expression3
    def unaryOperator
      elements[0]
    end

  end

  module Expression4
    def conditionalExpression
      elements[1]
    end
  end

  module Expression5
  end

  def _nt_expression
    start_index = index
    if node_cache[:expression].has_key?(index)
      cached = node_cache[:expression][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i2, s2 = index, []
    if has_terminal?("(", false, index)
      r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("(")
      r3 = nil
    end
    s2 << r3
    if r3
      s4, i4 = [], index
      loop do
        r5 = _nt_gap
        if r5
          s4 << r5
        else
          break
        end
      end
      r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
      s2 << r4
      if r4
        r6 = _nt_type
        s2 << r6
        if r6
          s7, i7 = [], index
          loop do
            r8 = _nt_gap
            if r8
              s7 << r8
            else
              break
            end
          end
          r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
          s2 << r7
          if r7
            if has_terminal?(")", false, index)
              r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(")")
              r9 = nil
            end
            s2 << r9
            if r9
              s10, i10 = [], index
              loop do
                r11 = _nt_gap
                if r11
                  s10 << r11
                else
                  break
                end
              end
              r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
              s2 << r10
            end
          end
        end
      end
    end
    if s2.last
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      r2.extend(Expression0)
    else
      @index = i2
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      i12 = index
      i13, s13 = index, []
      r14 = _nt_unaryOperator
      s13 << r14
      if r14
        s15, i15 = [], index
        loop do
          r16 = _nt_gap
          if r16
            s15 << r16
          else
            break
          end
        end
        if s15.empty?
          @index = i15
          r15 = nil
        else
          r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
        end
        s13 << r15
        if r15
          r17 = _nt_INSTANCEOF
          s13 << r17
          if r17
            s18, i18 = [], index
            loop do
              r19 = _nt_gap
              if r19
                s18 << r19
              else
                break
              end
            end
            if s18.empty?
              @index = i18
              r18 = nil
            else
              r18 = instantiate_node(SyntaxNode,input, i18...index, s18)
            end
            s13 << r18
            if r18
              r20 = _nt_expression
              s13 << r20
            end
          end
        end
      end
      if s13.last
        r13 = instantiate_node(JavaInstanceof,input, i13...index, s13)
        r13.extend(Expression1)
      else
        @index = i13
        r13 = nil
      end
      if r13
        r12 = r13
      else
        i21, s21 = index, []
        r22 = _nt_unaryOperator
        s21 << r22
        if r22
          i24, s24 = index, []
          s25, i25 = [], index
          loop do
            r26 = _nt_gap
            if r26
              s25 << r26
            else
              break
            end
          end
          r25 = instantiate_node(SyntaxNode,input, i25...index, s25)
          s24 << r25
          if r25
            r27 = _nt_exprOperator
            s24 << r27
            if r27
              s28, i28 = [], index
              loop do
                r29 = _nt_gap
                if r29
                  s28 << r29
                else
                  break
                end
              end
              r28 = instantiate_node(SyntaxNode,input, i28...index, s28)
              s24 << r28
              if r28
                r30 = _nt_expression
                s24 << r30
              end
            end
          end
          if s24.last
            r24 = instantiate_node(SyntaxNode,input, i24...index, s24)
            r24.extend(Expression2)
          else
            @index = i24
            r24 = nil
          end
          if r24
            r23 = r24
          else
            r23 = instantiate_node(SyntaxNode,input, index...index)
          end
          s21 << r23
        end
        if s21.last
          r21 = instantiate_node(SyntaxNode,input, i21...index, s21)
          r21.extend(Expression3)
        else
          @index = i21
          r21 = nil
        end
        if r21
          r12 = r21
        else
          @index = i12
          r12 = nil
        end
      end
      s0 << r12
      if r12
        i32, s32 = index, []
        s33, i33 = [], index
        loop do
          r34 = _nt_gap
          if r34
            s33 << r34
          else
            break
          end
        end
        r33 = instantiate_node(SyntaxNode,input, i33...index, s33)
        s32 << r33
        if r33
          r35 = _nt_conditionalExpression
          s32 << r35
        end
        if s32.last
          r32 = instantiate_node(SyntaxNode,input, i32...index, s32)
          r32.extend(Expression4)
        else
          @index = i32
          r32 = nil
        end
        if r32
          r31 = r32
        else
          r31 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r31
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Expression5)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:expression][start_index] = r0

    r0
  end

  def _nt_exprOperator
    start_index = index
    if node_cache[:exprOperator].has_key?(index)
      cached = node_cache[:exprOperator][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_binomialOperation
    if r1
      r0 = r1
    else
      r2 = _nt_assignmentOperation
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:exprOperator][start_index] = r0

    r0
  end

  module ConditionalExpression0
    def expression1
      elements[2]
    end

    def expression2
      elements[6]
    end
  end

  def _nt_conditionalExpression
    start_index = index
    if node_cache[:conditionalExpression].has_key?(index)
      cached = node_cache[:conditionalExpression][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("?", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("?")
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        r3 = _nt_gap
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        r4 = _nt_expression
        s0 << r4
        if r4
          s5, i5 = [], index
          loop do
            r6 = _nt_gap
            if r6
              s5 << r6
            else
              break
            end
          end
          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
          s0 << r5
          if r5
            if has_terminal?(":", false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(":")
              r7 = nil
            end
            s0 << r7
            if r7
              s8, i8 = [], index
              loop do
                r9 = _nt_gap
                if r9
                  s8 << r9
                else
                  break
                end
              end
              r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
              s0 << r8
              if r8
                r10 = _nt_expression
                s0 << r10
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(JavaConditionalExpression,input, i0...index, s0)
      r0.extend(ConditionalExpression0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:conditionalExpression][start_index] = r0

    r0
  end

  module UnaryOperator0
    def prefixOp
      elements[0]
    end

  end

  module UnaryOperator1
    def NEW
      elements[0]
    end

    def name
      elements[2]
    end

    def arguments
      elements[6]
    end

    def body
      elements[10]
    end

  end

  module UnaryOperator2
    def memberArrayCreator
      elements[0]
    end

  end

  module UnaryOperator3
    def postFixOp
      elements[1]
    end
  end

  module UnaryOperator4
  end

  def _nt_unaryOperator
    start_index = index
    if node_cache[:unaryOperator].has_key?(index)
      cached = node_cache[:unaryOperator][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      i2, s2 = index, []
      r3 = _nt_prefixOp
      s2 << r3
      if r3
        s4, i4 = [], index
        loop do
          r5 = _nt_gap
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s2 << r4
      end
      if s2.last
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
        r2.extend(UnaryOperator0)
      else
        @index = i2
        r2 = nil
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    s0 << r1
    if r1
      i6 = index
      i7, s7 = index, []
      r8 = _nt_NEW
      s7 << r8
      if r8
        s9, i9 = [], index
        loop do
          r10 = _nt_gap
          if r10
            s9 << r10
          else
            break
          end
        end
        if s9.empty?
          @index = i9
          r9 = nil
        else
          r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
        end
        s7 << r9
        if r9
          r11 = _nt_qualifiedIdentifier
          s7 << r11
          if r11
            s12, i12 = [], index
            loop do
              r13 = _nt_gap
              if r13
                s12 << r13
              else
                break
              end
            end
            r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
            s7 << r12
            if r12
              if has_terminal?("(", false, index)
                r14 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure("(")
                r14 = nil
              end
              s7 << r14
              if r14
                s15, i15 = [], index
                loop do
                  r16 = _nt_gap
                  if r16
                    s15 << r16
                  else
                    break
                  end
                end
                r15 = instantiate_node(SyntaxNode,input, i15...index, s15)
                s7 << r15
                if r15
                  r18 = _nt_exprList
                  if r18
                    r17 = r18
                  else
                    r17 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s7 << r17
                  if r17
                    s19, i19 = [], index
                    loop do
                      r20 = _nt_gap
                      if r20
                        s19 << r20
                      else
                        break
                      end
                    end
                    r19 = instantiate_node(SyntaxNode,input, i19...index, s19)
                    s7 << r19
                    if r19
                      if has_terminal?(")", false, index)
                        r21 = instantiate_node(SyntaxNode,input, index...(index + 1))
                        @index += 1
                      else
                        terminal_parse_failure(")")
                        r21 = nil
                      end
                      s7 << r21
                      if r21
                        s22, i22 = [], index
                        loop do
                          r23 = _nt_gap
                          if r23
                            s22 << r23
                          else
                            break
                          end
                        end
                        r22 = instantiate_node(SyntaxNode,input, i22...index, s22)
                        s7 << r22
                        if r22
                          r25 = _nt_classBody
                          if r25
                            r24 = r25
                          else
                            r24 = instantiate_node(SyntaxNode,input, index...index)
                          end
                          s7 << r24
                          if r24
                            if has_terminal?('', false, index)
                              r26 = instantiate_node(SyntaxNode,input, index...(index + 0))
                              @index += 0
                            else
                              terminal_parse_failure('')
                              r26 = nil
                            end
                            s7 << r26
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
      if s7.last
        r7 = instantiate_node(JavaClassInstantiation,input, i7...index, s7)
        r7.extend(UnaryOperator1)
      else
        @index = i7
        r7 = nil
      end
      if r7
        r6 = r7
      else
        i27, s27 = index, []
        r28 = _nt_memberArrayCreator
        s27 << r28
        if r28
          if has_terminal?('', false, index)
            r29 = instantiate_node(SyntaxNode,input, index...(index + 0))
            @index += 0
          else
            terminal_parse_failure('')
            r29 = nil
          end
          s27 << r29
        end
        if s27.last
          r27 = instantiate_node(JavaExpressionMember,input, i27...index, s27)
          r27.extend(UnaryOperator2)
        else
          @index = i27
          r27 = nil
        end
        if r27
          r6 = r27
        else
          r30 = _nt_field
          if r30
            r6 = r30
          else
            @index = i6
            r6 = nil
          end
        end
      end
      s0 << r6
      if r6
        i32, s32 = index, []
        s33, i33 = [], index
        loop do
          r34 = _nt_gap
          if r34
            s33 << r34
          else
            break
          end
        end
        r33 = instantiate_node(SyntaxNode,input, i33...index, s33)
        s32 << r33
        if r33
          r35 = _nt_postFixOp
          s32 << r35
        end
        if s32.last
          r32 = instantiate_node(SyntaxNode,input, i32...index, s32)
          r32.extend(UnaryOperator3)
        else
          @index = i32
          r32 = nil
        end
        if r32
          r31 = r32
        else
          r31 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r31
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(UnaryOperator4)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:unaryOperator][start_index] = r0

    r0
  end

  module Field0
    def dimExpr
      elements[1]
    end
  end

  module Field1
  end

  def _nt_field
    start_index = index
    if node_cache[:field].has_key?(index)
      cached = node_cache[:field][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    r2 = _nt_groupExpressionMembers
    if r2
      r1 = r2
    else
      r3 = _nt_literal
      if r3
        r1 = r3
      else
        r4 = _nt_thisMethodCall
        if r4
          r1 = r4
        else
          r5 = _nt_superConstructorCall
          if r5
            r1 = r5
          else
            r6 = _nt_superMethodCall
            if r6
              r1 = r6
            else
              r7 = _nt_methodCall
              if r7
                r1 = r7
              else
                r8 = _nt_classReference
                if r8
                  r1 = r8
                else
                  r9 = _nt_bodyIdenfifier
                  if r9
                    r1 = r9
                  else
                    @index = i1
                    r1 = nil
                  end
                end
              end
            end
          end
        end
      end
    end
    s0 << r1
    if r1
      s10, i10 = [], index
      loop do
        i11, s11 = index, []
        s12, i12 = [], index
        loop do
          r13 = _nt_gap
          if r13
            s12 << r13
          else
            break
          end
        end
        r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
        s11 << r12
        if r12
          r14 = _nt_dimExpr
          s11 << r14
        end
        if s11.last
          r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
          r11.extend(Field0)
        else
          @index = i11
          r11 = nil
        end
        if r11
          s10 << r11
        else
          break
        end
      end
      r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
      s0 << r10
      if r10
        r16 = _nt_accessorField
        if r16
          r15 = r16
        else
          r15 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r15
      end
    end
    if s0.last
      r0 = instantiate_node(JavaField,input, i0...index, s0)
      r0.extend(Field1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:field][start_index] = r0

    r0
  end

  module BodyIdenfifier0
    def dimExpr
      elements[1]
    end
  end

  module BodyIdenfifier1
    def name
      elements[0]
    end

  end

  def _nt_bodyIdenfifier
    start_index = index
    if node_cache[:bodyIdenfifier].has_key?(index)
      cached = node_cache[:bodyIdenfifier][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_identifier
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        s4, i4 = [], index
        loop do
          r5 = _nt_gap
          if r5
            s4 << r5
          else
            break
          end
        end
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        s3 << r4
        if r4
          r6 = _nt_dimExpr
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(BodyIdenfifier0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        i7 = index
        if has_terminal?('\G[\\(]', true, index)
          r8 = true
          @index += 1
        else
          r8 = nil
        end
        if r8
          r7 = nil
        else
          @index = i7
          r7 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(JavaBodyIdentifier,input, i0...index, s0)
      r0.extend(BodyIdenfifier1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:bodyIdenfifier][start_index] = r0

    r0
  end

  module ClassReference0
    def identifier
      elements[0]
    end

  end

  def _nt_classReference
    start_index = index
    if node_cache[:classReference].has_key?(index)
      cached = node_cache[:classReference][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_identifier
    s0 << r1
    if r1
      if has_terminal?(".class", false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure(".class")
        r2 = nil
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ClassReference0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:classReference][start_index] = r0

    r0
  end

  module SuperMethodCall0
    def method
      elements[1]
    end
  end

  def _nt_superMethodCall
    start_index = index
    if node_cache[:superMethodCall].has_key?(index)
      cached = node_cache[:superMethodCall][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("super.", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure("super.")
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_methodCall
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(JavaSuperMethodCall,input, i0...index, s0)
      r0.extend(SuperMethodCall0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:superMethodCall][start_index] = r0

    r0
  end

  module SuperConstructorCall0
    def arguments
      elements[4]
    end

  end

  def _nt_superConstructorCall
    start_index = index
    if node_cache[:superConstructorCall].has_key?(index)
      cached = node_cache[:superConstructorCall][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("super", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure("super")
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        r3 = _nt_gap
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        if has_terminal?("(", false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure("(")
          r4 = nil
        end
        s0 << r4
        if r4
          s5, i5 = [], index
          loop do
            r6 = _nt_gap
            if r6
              s5 << r6
            else
              break
            end
          end
          r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
          s0 << r5
          if r5
            r8 = _nt_exprList
            if r8
              r7 = r8
            else
              r7 = instantiate_node(SyntaxNode,input, index...index)
            end
            s0 << r7
            if r7
              s9, i9 = [], index
              loop do
                r10 = _nt_gap
                if r10
                  s9 << r10
                else
                  break
                end
              end
              r9 = instantiate_node(SyntaxNode,input, i9...index, s9)
              s0 << r9
              if r9
                if has_terminal?(")", false, index)
                  r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(")")
                  r11 = nil
                end
                s0 << r11
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(JavaSuperConstructorCall,input, i0...index, s0)
      r0.extend(SuperConstructorCall0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:superConstructorCall][start_index] = r0

    r0
  end

  module ThisMethodCall0
    def arguments
      elements[4]
    end

  end
